[ring] Fix multiple stability issues (#20943)
* Implement fixes suggested by Gemini

Signed-off-by: Paul Smedley <paul@smedley.id.au>